--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <header id="masthead">
+  <header id="top-bar">
     <div class="container">
       <a href="index.html" id="logo">Laurentius Tirtarahardja</a>
       <nav>
