--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <header id="masthead">
+  <header id="top-bar">
     <div class="container">
       <a href="index.html" id="logo">Laurentius Tirtarahardja</a>
       <nav>
