--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <footer>
     <div class="container">
-      &copy; Copyright 2017 Your Name
+      &copy; Copyright 2017 Laurentius Tirtarahardja
     </div>
   </footer>
 </body>
