--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 
   <footer>
     <div class="container">
-      &copy; Copyright 2017 Laurentius Tirtarahardja
+      Copyright &copy; 2017 Laurentius Tirtarahardja
     </div>
   </footer>
 </body>
