--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <footer>
     <div class="container">
-      &copy; Copyright 2017 Laurentius Tirtarahardja
+      Copyright &copy; 2017 Laurentius Tirtarahardja
     </div>
   </footer>
 </body>
