--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="assets/images/bdplogoblack.png" alt="Below Decks Podcast">
+        <a href="https://www.belowdeckspodcast.com" target="_blank" alt="Below Decks: A Shield of Tomorrow Podcast"><img src="assets/images/bdplogoblack.png" alt="Below Decks Podcast"></a>
 
         <h3>Below Decks Podcast</h3>
       </div>
