--- a/index.html
+++ b/index.html
@@ -28,11 +28,19 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/biopic.png" class="auth-image" alt="Laurentius Tirtarahardja">
+      <img src="assets/images/profile-cropped.png" class="auth-image" alt="Laurentius Tirtarahardja">
 
-      <p>Born in Torrance, California, Laurentius has lived all of his life in Southern California, spending most of his life in Orange County. He has always had an aptitude for technology and computers, having built his own desktops since he was a teenager. Laurentius has a passion for hockey, having played as a child and off and on for the past ten years in local adult leagues, playing defense. His favorite team is the <a href="https://ducks.nhl.com" target="_blank">Anaheim Ducks</a>, his favorite overall player being Teemu Selanne, but also favoring Fran&ccedil;ois Beachemin, Ryan Getzlaf, and Rickard Rackell.</p>
+      <p>Born in Torrance, California, Laurentius has lived all of his life in Southern California, spending most of his life
+        in Orange County. He has always had an aptitude for technology and computers, having built his own desktops since
+        he was a teenager. Laurentius has a passion for hockey, having played as a child and off and on for the past ten
+        years in local adult leagues, playing defense. His favorite team is the
+        <a href="https://ducks.nhl.com" target="_blank">Anaheim Ducks</a>, his favorite overall player being Teemu Selanne, but also favoring Fran&ccedil;ois Beachemin,
+        Ryan Getzlaf, and Rickard Rackell.</p>
 
-      <p>Laurentius has loved Star Trek and Star Wars for as long as he can remember and has watched <a href="https:/geekandsundry.com" target="_blank">Geek &amp; Sundry</a> for the past 8 years. His other interests include Critical Role, Shield of Tomorrow, Dungeons &amp; Dragons, podcasts, technology, video games, and music. he currently hosts the <a href="https://www.belowdeckspodcast.com" target="_blank">Below Decks Podcast</a> each week.</p>
+      <p>Laurentius has loved Star Trek and Star Wars for as long as he can remember and has watched
+        <a href="https:/geekandsundry.com" target="_blank">Geek &amp; Sundry</a> for the past 8 years. His other interests include Critical Role, Shield of Tomorrow, Dungeons
+        &amp; Dragons, podcasts, technology, video games, and music. he currently hosts the
+        <a href="https://www.belowdeckspodcast.com" target="_blank">Below Decks Podcast</a> each week.</p>
 
     </section>
 
@@ -40,9 +48,15 @@
       <div id="connect">
         <h2>Connect with Me</h2>
 
-        <a href="https://github.com/pablackhawk"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        <a href="https://stackoverflow.com/users/8588499/laurent-tirtrarahardja?tab=profile"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        <a href="https://www.linkedin.com/in/laurent-tirtarahardja-a0a5a144/"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+        <a href="https://github.com/pablackhawk">
+          <img src="assets/images/github-128.png" class="social" alt="GitHub" />
+        </a>
+        <a href="https://www.linkedin.com/in/laurent-tirtarahardja-a0a5a144/">
+          <img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" />
+        </a>
+        <a href="https://stackoverflow.com/users/8588499/laurent-tirtrarahardja?tab=profile">
+          <img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" />
+        </a>
       </div>
     </section>
   </div>
